[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/player/target.png" type="Texture" id=1]
[ext_resource path="res://Levels/Props/Target.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/targetshot2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/effects/targetHit.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/levels/props/targetJungle.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0

[node name="Target" type="StaticBody2D" groups=["target"]]
position = Vector2( 135, 42 )
collision_layer = 257
collision_mask = 257
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="SpriteJungle" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="shotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -4.608
bus = "SFX"

[node name="hit" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.43051e-06, -9.53674e-07 )
scale = Vector2( 1.6, 1.6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
